--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@
 }
 
 .headline {
-  background-color: #1C1A19;
+  background-color: #1c1a19;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
