--- a/style.css
+++ b/style.css
@@ -9,61 +9,21 @@
   text-decoration: none;
 }
 
-.status {
-  position: absolute;
-  width: 375px;
-  height: 44px;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.time {
-  position: absolute;
-  width: 54px;
-  height: 21px;
-  left: 21px;
-  top: 13px;
-}
-
-.time p {
-  color: white;
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: -0.28px;
-}
-
-.statusicons {
-  position: absolute;
-  width: 66.66px;
-  height: 11.34px;
-  left: 293.67px;
-  top: 11.33px;
-}
-
 .container {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 44px;
-  bottom: 0;
+  display: flex;
+  justify-content: space-between;
   background-color: rgba(0, 0, 0, 0.7);
   width: 375px;
   height: 48px;
   margin: 0;
-  padding: 0 50px;
+  padding: 0 25px;
+  align-items: center;
 }
 
 .logobox {
   padding: 10px 12px;
-  position: absolute;
   width: 101px;
   height: 44px;
-  left: 35px;
-  top: calc(50% - 44px / 2);
 }
 
 .logo {
@@ -75,34 +35,24 @@
 
 .menu {
   padding: 8px;
-  position: absolute;
   width: 40px;
   height: 40px;
-  right: 20px;
-  top: calc(50% - 40px / 2);
   border-radius: 8px;
 }
 
 .menupart {
-  position: absolute;
   width: 18px;
   height: 12px;
-  left: 3px;
-  top: 6px;
 }
 
 .headline {
   background-color: #1c1a19;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   padding: 120px 35px;
   gap: 12px;
-  position: absolute;
   width: 375px;
   height: 590px;
-  left: 0;
-  top: 92px;
   background-image: url(images/backgroundIllustration.png);
   background-repeat: no-repeat;
   background-position: bottom right;
