--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ main {
   text-align: left;
   justify-content: flex-start;
   padding: 0 25px;
+  height: 550px;
 }
 
 .firstprojectpicture {
@@ -278,7 +279,7 @@ main {
   margin: 20px 25px;
 }
 
-.skillsused {;
+.skillsused {
   margin: 0 15px;
 }
 
@@ -360,18 +361,21 @@ main {
   color: white;
 }
 
+.divisorbackground {
+  background-color: #1C1A19;
+}
 .divisor {
   margin: auto;
   padding-top: 20px;
   border-bottom: 3px solid grey;
-  width: 350px;;
+  width: 350px;
 }
 
 .skills {
   color: white;
   text-align: center;
   background-color: #1c1a19;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 
 .skills h2 {
@@ -412,9 +416,9 @@ main {
 
 .form {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   padding: 1rem;
 }
 
@@ -476,7 +480,7 @@ main {
   background-color: #ff6a0058;
   color: #ff6b00;
   transition-duration: 1s;
-  border: 4px solid #ff6b00;
+  border: 2px solid #ff6b00;
 }
 
 .finalbuttom:active {
@@ -484,6 +488,11 @@ main {
   transform: scale(0.9);
   border: 4px solid red;
   color: white;
+}
+
+.finalbuttom:disabled {
+  background-color: #f4f1f0;
+  color: #5b5957;
 }
 
 footer {
@@ -506,111 +515,46 @@ ul {
   list-style-type: none;
 }
 
-/*
-.test {
-    background-color: black;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    height: 600px;
-    margin-top: 20px;
-}
-.box1 {
-    grid-area: 1 / 1 / 3 / 3;
-    background-color: blue;
-}
-.box2 {
-    grid-column: 3/4;
-    grid-row: 3/4;
-    background-color: red;
-}
-.box3 {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row: 3/4;
-    background-color: green;
-}
-.box4 {
-    grid-column: 3/4;
-    grid-row: 2/3;
-    background-color: yellow;
-}
-.box5 {
-    grid-area: 1 / 3;
-    background-color: purple;
-}
-.box6 {
-    grid-area: 3 / 1;
-    background-color: orange;
-}
+/* MEDIA QUERIES */
 
-.flextest {
-    height: 600px;
-    display: flex;
-    background-color: black;
-    margin-top: 20px;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding-top: 35px;
-}
-.flexbox1 {
-    background-color: blue;
-    height: 200px;
-    width: 200px;
-}
-.flexbox2 {
-  background-color: red;
-  height: 200px;
-  width: 200px;
-}
-.flexbox3 {
-  background-color: yellow;
-  height: 200px;
-  width: 200px;
-}
-.flexbox4 {
-  background-color: green;
-  height: 200px;
-  width: 200px;
-}
-.flexbox5 {
-  background-color: purple;
-  height: 200px;
-  width: 200px;
-}*/
-
-
-
-
-
-
-
-
-
-@media all and (min-width: 700px) {
+@media all and (min-width: 1000px) {
   .worksprojects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
     padding: 0 75px;
+    padding-bottom: 150px;
   }
-
+  
   .worksstart {
     padding-top: 120px;
     padding-bottom: 75px;
-    padding-left: 75px;
+    padding-left: 130px;
     text-align: left;
   }
   .firstproject {
     display: flex;
     flex-direction: row;
     justify-content: start;
-    padding: 0 75px;
+    padding: 0 130px;
+    background-color: white;
   }
   .firstprojecttexts {
     width: 400px;
     padding-left: 25px;
+  }
+  .aboutme {
+    padding: 50px 200px;
+  }
+  .aboutme > p {
+    width: 566px;
+    height: 148px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 32px;
   }
   .aboutmeskills {
     display: grid;
@@ -639,7 +583,7 @@ ul {
   }
 }
 
-@media all and (min-width: 1100px) {
+@media all and (min-width: 1360px) {
   .worksprojects {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -655,6 +599,15 @@ ul {
     background-image: url(images/Img\ Placeholder\ \(3\).png);
     height: 448px;
     width: 684px;
+  }
+  .aboutme {
+    background-image: url(images/aboutmebackground.png);
+    background-repeat: no-repeat;
+    background-size: 50%;
+    background-position: bottom right;
+  }
+  .divisor {
+    width: 1100px;
   }
 }
 
