--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@ main {
   background-color: #ff6a0057;
   color: #ff6b00;
   transition-duration: 1s;
-  border: 4px solid #ff6b00;
 }
 
 .firstbuttom:active {
@@ -251,7 +250,7 @@ main {
   color: #ff6b00;
   transition-duration: 1s;
 }
-  
+
 .buttons:active {
   background-color: red;
   color: white;
@@ -353,7 +352,7 @@ main {
   border: 4px solid #ff6b00;
   transition-duration: 1s;
 }
-  
+
 .buttom:active {
   background-color: rgb(255, 0, 0);
   transform: scale(0.9);
@@ -362,8 +361,9 @@ main {
 }
 
 .divisorbackground {
-  background-color: #1C1A19;
+  background-color: #1c1a19;
 }
+
 .divisor {
   margin: auto;
   padding-top: 20px;
@@ -526,13 +526,14 @@ ul {
     padding: 0 75px;
     padding-bottom: 150px;
   }
-  
+
   .worksstart {
     padding-top: 120px;
     padding-bottom: 75px;
     padding-left: 130px;
     text-align: left;
   }
+
   .firstproject {
     display: flex;
     flex-direction: row;
@@ -540,22 +541,26 @@ ul {
     padding: 0 130px;
     background-color: white;
   }
+
   .firstprojecttexts {
     width: 400px;
     padding-left: 25px;
   }
+
   .aboutme {
     padding: 50px 200px;
   }
+
   .aboutme > p {
     width: 566px;
     height: 148px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
     line-height: 32px;
   }
+
   .aboutmeskills {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -563,21 +568,26 @@ ul {
     justify-items: center;
     padding: 0 75px;
   }
+
   .formulary {
     display: flex;
     justify-content: center;
   }
+
   .formulary h2 {
     width: 330px;
     text-align: left;
   }
+
   .headlineitems {
     width: 550px;
   }
+
   .finalbuttom {
     margin: auto;
     text-align: center;
   }
+
   .divisor {
     width: 650px;
   }
@@ -590,22 +600,26 @@ ul {
     grid-template-rows: 1fr 1fr;
     justify-items: center;
   }
+
   .headline {
     background-image: url(Illustration-header.png);
     background-repeat: no-repeat;
     background-position: bottom right;
   }
+
   .firstprojectpicture {
     background-image: url(images/Img\ Placeholder\ \(3\).png);
     height: 448px;
     width: 684px;
   }
+
   .aboutme {
     background-image: url(images/aboutmebackground.png);
     background-repeat: no-repeat;
     background-size: 50%;
     background-position: bottom right;
   }
+
   .divisor {
     width: 1100px;
   }
