--- a/style.css
+++ b/style.css
@@ -471,7 +471,6 @@ main {
   gap: 10px;
   background-color: #ff6b00;
   color: white;
-  border: 4px solid #ff6b00;
   border-radius: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.288);
 }
@@ -608,7 +607,7 @@ ul {
   }
 
   .firstprojectpicture {
-    background-image: url(images/Img\ Placeholder\ \(3\).png);
+    background-image: url(images/imgplaceholder.png);
     height: 448px;
     width: 684px;
   }
@@ -624,5 +623,3 @@ ul {
     width: 1100px;
   }
 }
-
-/* TESTS */ 
