--- a/style.css
+++ b/style.css
@@ -182,7 +182,6 @@ main {
 
 .firstbuttom {
   background: #ff6b00;
-  border: none;
   color: white;
   padding: 12px;
   gap: 10px;
@@ -473,6 +472,7 @@ main {
   color: white;
   border-radius: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.288);
+  border: 4px solid #ff6b00;
 }
 
 .finalbuttom:hover {
