--- a/style.css
+++ b/style.css
@@ -108,10 +108,13 @@ main {
 }
 
 .worksstart {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 0 25px;
   padding-top: 120px;
   padding-bottom: 75px;
-  gap: 80px;
-  text-align: center;
+  gap: 20px;
 }
 
 .workstitle {
@@ -123,7 +126,7 @@ main {
   color: #212121;
 }
 
-.worksstart img {
+.worksstart .border {
   width: 327px;
   height: 0;
   border-bottom: 1px solid #212121;
@@ -136,7 +139,7 @@ main {
   text-align: left;
   justify-content: flex-start;
   padding: 0 25px;
-  height: 550px;
+  height: 100%;
 }
 
 .firstprojectpicture {
@@ -183,30 +186,40 @@ main {
 .firstbuttom {
   background: #ff6b00;
   color: white;
-  padding: 12px;
-  gap: 10px;
   width: 124px;
   height: 48px;
   margin: 20px 0;
-  border: 4px solid #ff6b00;
+  border: 2px solid #ff6b00;
   border-radius: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.164);
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
 }
 
 .firstbuttom:hover {
-  background-color: #ff6a0057;
+  background-color: #fff5e1;
   color: #ff6b00;
   transition-duration: 1s;
 }
 
 .firstbuttom:active {
-  background-color: rgb(255, 0, 0);
+  background-color: #e05304;
   transform: scale(0.9);
-  border: 4px solid red;
+  border: 2px solid #e05304;
   color: white;
 }
 
+.firstbuttom:disabled {
+  background-color: #f4f1f0;
+  color: #5b5957;
+}
+
 .worksprojects {
+  width: 327px;
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr;
   padding: 0;
@@ -237,7 +250,7 @@ main {
   text-decoration: none;
   font-family: 'Inter', sans-serif;
   font-style: normal;
-  font-weight: 900;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   padding: 20px 0;
@@ -245,14 +258,19 @@ main {
 }
 
 .buttons:hover {
-  background-color: #ff6a0057;
+  background-color: #fff5e1;
   color: #ff6b00;
   transition-duration: 1s;
 }
 
 .buttons:active {
-  background-color: red;
+  background-color: #e05304;
   color: white;
+}
+
+.buttons:disabled {
+  background-color: #f4f1f0;
+  color: #5b5957;
 }
 
 .projects h2 {
@@ -315,7 +333,7 @@ main {
   font-weight: 400;
   font-size: 72px;
   line-height: 88px;
-  margin: 10px 25px;
+  margin: 10px 25px; 
   margin-top: 100px;
 }
 
@@ -341,33 +359,54 @@ main {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
-  border: 4px solid #ff6b00;
+  border: 2px solid #ff6b00;
   border-radius: 5px;
 }
 
 .buttom:hover {
-  background-color: #ff6a0057;
+  background-color: #fff5e1;
   color: #ff6b00;
-  border: 4px solid #ff6b00;
+  border: 2px solid #ff6b00;
   transition-duration: 1s;
 }
 
 .buttom:active {
-  background-color: rgb(255, 0, 0);
+  background-color: #e05304;
   transform: scale(0.9);
-  border: 4px solid red;
+  border: 2px solid #e05304;
   color: white;
 }
 
-.divisorbackground {
-  background-color: #1c1a19;
+.buttom:disabled {
+  background-color: #f4f1f0;
+  color: #5b5957;
 }
 
-.divisor {
-  margin: auto;
-  padding-top: 20px;
-  border-bottom: 3px solid grey;
-  width: 350px;
+.signs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.sign {
+  background-color: #ff6b00;
+  height: 15px;
+  width: 15px;
+}
+
+.sign1 {
+  background-color: #ff6b00;
+  height: 15px;
+  width: 15px;
+  transform: rotate(45deg);
+
+}
+.sign2 {
+  background-color: #ff6b00;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
 }
 
 .skills {
@@ -379,7 +418,6 @@ main {
 
 .skills h2 {
   color: white;
-  padding-top: 30px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -389,7 +427,7 @@ main {
 
 .skills h3 {
   color: rgb(226, 226, 226);
-  padding-top: 30px;
+  padding-top: 25px;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -398,12 +436,12 @@ main {
 }
 
 .formulary {
-  background-color: white;
+  background-color: #e5e5e5;
   text-align: center;
   padding: 100px 30px;
 }
 
-.formulary h2 {
+.paragraph {
   color: #172b4d;
   font-family: 'Inter', sans-serif;
   font-style: normal;
@@ -417,24 +455,29 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  padding: 1rem;
+  align-items: flex-start;
+  padding: 0 1rem;
 }
 
 .form input,
 .form textarea {
   display: block;
   border: none;
-  border-bottom: 1px solid rgb(207, 207, 207);
-  line-height: 10px;
+  border-bottom: 1px solid #DBD8D7; 
   margin: 10px 0;
   width: 327px;
   padding: 20px;
   color: black;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
+
 }
 
 .form input::placeholder {
-  color: rgb(172, 172, 172);
+  color: #979493;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -457,7 +500,7 @@ main {
   margin-bottom: 25px;
   height: 114px;
   width: 327px;
-  padding: 20px;
+  padding: 20px 10px;
 }
 
 .finalbuttom {
@@ -472,20 +515,20 @@ main {
   color: white;
   border-radius: 5px;
   box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.288);
-  border: 4px solid #ff6b00;
+  border: 2px solid #ff6b00;
 }
 
 .finalbuttom:hover {
-  background-color: #ff6a0058;
+  background-color: #fff5e1;
   color: #ff6b00;
   transition-duration: 1s;
   border: 2px solid #ff6b00;
 }
 
 .finalbuttom:active {
-  background-color: rgb(255, 0, 0);
+  background-color: #e05304;
   transform: scale(0.9);
-  border: 4px solid red;
+  border: 2px solid #e05304;
   color: white;
 }
 
@@ -502,7 +545,7 @@ footer {
 .footer {
   padding-top: 25px;
   background-color: white;
-  height: 65px;
+  height: 72px;
   border-top: 1px solid rgb(180, 180, 180);
 }
 
@@ -514,14 +557,36 @@ ul {
   list-style-type: none;
 }
 
+.test1 {
+  display: none;
+}
+
 /* MEDIA QUERIES */
 
 @media all and (min-width: 1000px) {
+  .headline {
+    padding: 120px 230px;
+  }
+
+  .worksstart {
+    flex-direction: row;
+  }
+
+  .worksstart .border {
+    height: 30px;
+    width: 400px;
+  }
+
+  .firstprojectpicture {
+    min-width: 327px;
+  }
+
   .worksprojects {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     justify-items: center;
+    justify-content: center;
     padding: 0 75px;
     padding-bottom: 150px;
   }
@@ -529,7 +594,7 @@ ul {
   .worksstart {
     padding-top: 120px;
     padding-bottom: 75px;
-    padding-left: 130px;
+    padding-left: 230px;
     text-align: left;
   }
 
@@ -537,13 +602,9 @@ ul {
     display: flex;
     flex-direction: row;
     justify-content: start;
-    padding: 0 130px;
+    gap: 25px;
+    padding: 0 230px;
     background-color: white;
-  }
-
-  .firstprojecttexts {
-    width: 400px;
-    padding-left: 25px;
   }
 
   .aboutme {
@@ -559,8 +620,8 @@ ul {
     font-size: 20px;
     line-height: 32px;
   }
-
-  .aboutmeskills {
+  
+  .aboutmeskills{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
@@ -568,12 +629,16 @@ ul {
     padding: 0 75px;
   }
 
+.aboutmeskills ul {
+  text-align: left;
+}
+
   .formulary {
     display: flex;
     justify-content: center;
   }
 
-  .formulary h2 {
+  .paragraph {
     width: 330px;
     text-align: left;
   }
@@ -593,6 +658,14 @@ ul {
 }
 
 @media all and (min-width: 1360px) {
+  .worksstart {
+    padding-left: 230px;
+  }
+
+  .worksstart .border {
+    width: 700px;
+  }
+
   .worksprojects {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -606,10 +679,16 @@ ul {
     background-position: bottom right;
   }
 
+  .firstproject {
+    padding: 0 230px;
+  }
+
   .firstprojectpicture {
-    background-image: url(images/imgplaceholder.png);
+    background-image: url(images/firstprojectbig.png);
+    background-repeat: no-repeat;
+    background-size: contain;
     height: 448px;
-    width: 684px;
+    min-width: 684px;
   }
 
   .aboutme {
@@ -623,3 +702,4 @@ ul {
     width: 1100px;
   }
 }
+
